crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_and_int_error.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2011: boolean operator requires `Bool` operands but found `Int`
