crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_case_default_int_else_prop.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run_with_return_type(&stmt)
---
diagnostics: 0
return[0]: Union([Any, Int])
