crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_ends_with_bool_error.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2010: string operator requires `String` operands but found `Bool`
