crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_id_of_int_literal_errors_e5012.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E5012: builtin `id` argument has type `Int` but expected `Node | Relationship | Path`
