crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_in_list_type_mismatch_error.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2012: `IN` operand type `Bool` is not compatible with list element type `Int`
